jack增加在线监控功能，直接调用H5监控网页。

--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -8,8 +8,10 @@
     <string name="urlChat" >http://plant.sturgeon.mopaasapp.com/secondaryWeb/news.jsp</string>
     <string name="urlKnowledge" >http://www.hua36.com</string>
     <string name="urlType" >http://plant.sturgeon.mopaasapp.com/secondaryWeb/encyclopedias.jsp</string>
+    <string name="urlCamera" >https://open.ys7.com/view/h5/281a6f787ab64417bedf513e12227d63</string>
+
     <string name="msgApp">请先下载并安装智慧星APP</string>
     <string name="msgChat">种植交流</string>
     <string name="msgType">种植选型</string>
-
+    <string name="msgCamera">在线监控</string>
 </resources>
