--- a/app/src/main/res/layout/activity_failure_warn.xml
+++ b/app/src/main/res/layout/activity_failure_warn.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="person.jack.plant.activity.FailureWarnActivity">
+
+    <include layout="@layout/layout_main_header" />
+
 <LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginTop="30dp"
+    android:layout_marginTop="20dp"
 
     >
     <!--机器类型信息 1-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="140dp"
         android:layout_weight="1"
         android:orientation="horizontal"
         android:background="@drawable/csy_form"
@@ -139,7 +143,7 @@
     <!--机器类型信息 1-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="140dp"
         android:layout_weight="1"
         android:orientation="horizontal"
         android:layout_margin="5dp"
@@ -261,7 +265,7 @@
     <!--机器类型信息 1-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="140dp"
         android:layout_weight="1"
         android:orientation="horizontal"
         android:background="@drawable/csy_form"
@@ -380,7 +384,8 @@
 
     </LinearLayout>
     <!--机器类型信息 1 结束-->
-    <!--机器类型信息 1-->
+
+    <!--机器类型信息
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -486,7 +491,7 @@
         </LinearLayout>
 
     </LinearLayout>
-    <!--机器类型信息 1 结束-->
+    机器类型信息 1 结束-->
 
 </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
