yanxu  修改阈值设置、环境报警位置

--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -3,9 +3,9 @@
 
 	<string-array name="news_titles">
 		<item>植物列表</item>
-		<item>阈值设置</item>
+		<!--<item>阈值设置</item>
 		<item>报警记录</item>
-		<item>灌溉记录</item>
+		<item>灌溉记录</item>-->
 	</string-array>
 
 </resources>
