--- a/app/src/main/res/layout/member_content_view.xml
+++ b/app/src/main/res/layout/member_content_view.xml
@@ -61,7 +61,26 @@
         android:text="@string/member_verson"
         android:textColor="@color/text_color_black"
         android:textSize="@dimen/text_size_16" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="15dp"
+        android:background="@drawable/list_view_divider" />
 
+    <TextView
+        android:id="@+id/textValueSet"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@drawable/list_item_selector"
+        android:drawableLeft="@drawable/ic_setting_setting"
+        android:drawablePadding="10dp"
+        android:drawableRight="@drawable/ic_setting_arrow"
+        android:gravity="center_vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="14dp"
+        android:text="@string/member_value_set"
+        android:textColor="@color/text_color_black"
+        android:textSize="@dimen/text_size_16" />
     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
