kakee 	状态查询为实时数据，更改实时数据界面参照花花草草app，点击实时数据界面中的植物图片则进入植物详细信息.状态查询修改为统计查询，统计界面改为实时

--- a/app/src/main/res/layout/recommend_shop_list.xml
+++ b/app/src/main/res/layout/recommend_shop_list.xml
@@ -16,22 +16,27 @@
         android:orientation="horizontal">
 
         <TextView
+            android:gravity="center"
+            android:textSize="10sp"
             android:layout_marginLeft="15dp"
             android:text="植物图片"
-            android:layout_width="80dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content" />
         <TextView
+            android:textSize="10sp"
             android:layout_marginLeft="10dp"
             android:text="温度（℃）"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:textSize="10sp"
             android:text="湿度（%）"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:textSize="10sp"
             android:text="光照强度（xl）"
             android:layout_weight="1"
             android:layout_width="wrap_content"
