yanxu  详情信息页面添加删除更新按钮，主页面滑动栏去掉

--- a/app/src/main/res/layout/activity_env_warn.xml
+++ b/app/src/main/res/layout/activity_env_warn.xml
@@ -60,9 +60,9 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#FFB7DED5"/>
+        android:layout_height="1.5dp"
 
+        android:background="@drawable/list_view_divider" />
 
     <ListView
         android:id="@+id/waring_list"
