--- a/app/src/main/res/layout/fragment_demo_ptr.xml
+++ b/app/src/main/res/layout/fragment_demo_ptr.xml
@@ -9,8 +9,10 @@
     <RadioGroup
         android:id="@+id/group"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="200dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
 
         <LinearLayout
             android:layout_width="fill_parent"
