--- a/app/src/main/res/layout/fragment_demo_ptr.xml
+++ b/app/src/main/res/layout/fragment_demo_ptr.xml
@@ -12,6 +12,7 @@
         android:layout_height="200dp"
         android:orientation="vertical"
         android:gravity="center"
+        android:background="#fff"
         >
 
         <LinearLayout
