--- a/app/src/main/res/layout/activity_plants_detail.xml
+++ b/app/src/main/res/layout/activity_plants_detail.xml
@@ -70,6 +70,11 @@
                     style="@style/csy_row"
                     android:layout_height="@dimen/space_50">
 
+                    <TextView
+                        style="@style/csy_row_label"
+                        android:layout_width="100dp"
+                        android:text="植物种类" />
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/space_50"
@@ -78,11 +83,12 @@
                         <TextView
                             android:id="@+id/tv_type"
                             style="@style/csy_textbox"
-                            android:layout_marginLeft="@dimen/space_8"
-                            android:text="车矢菊"
-                            android:clickable="false"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
 
-                            />
+                            android:layout_alignParentTop="true"
+                            android:clickable="false"
+                            android:text="车矢菊" />
                     </RelativeLayout>
                 </LinearLayout>
                 <LinearLayout
@@ -122,7 +128,7 @@
                     <TextView
                         style="@style/csy_row_label"
                         android:layout_width="100dp"
-                        android:text="当前生长状态" />
+                        android:text="生长状态" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
