--- a/app/src/main/res/layout/fragment_warn_item.xml
+++ b/app/src/main/res/layout/fragment_warn_item.xml
@@ -8,46 +8,51 @@
 
     <TextView
         android:id="@+id/waring_id"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="序号" />
 
 
     <TextView
         android:id="@+id/waring_name"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="植物名称" />
 
 
     <TextView
         android:id="@+id/waring_type"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="类型" />
 
 
     <TextView
         android:id="@+id/waring_num"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="数值" />
 
 
     <TextView
         android:id="@+id/waring_time"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_weight="0.6"
         android:gravity="center"
+        android:textColor="@color/black"
         android:text="时间" />
 
 
