--- a/app/src/main/res/layout/fragment_env_history_search.xml
+++ b/app/src/main/res/layout/fragment_env_history_search.xml
@@ -6,6 +6,36 @@
     tools:context="person.jack.plant.fragment.EnvHistorySearchFragment">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:gravity="center"
+            android:text="请选择时间："
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent" />
+
+        <Spinner
+            android:id="@+id/env_history_spinner"
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:entries="@array/env_history_spinner"/>
+
+        <Button
+            android:id="@+id/env_history_search"
+            android:text="查询"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:background="@drawable/csy_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/env_hide"
+        android:visibility="gone"
         android:layout_marginTop="5dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
