--- a/app/src/main/res/layout/recommend_shop_list_item.xml
+++ b/app/src/main/res/layout/recommend_shop_list_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/default_image" />
+        android:src="@drawable/default_plant" />
 
     <TextView
         android:layout_centerVertical="true"
